# FastAnnotationTool

./: .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  Dockerfile  Makefile  README.md  _config.yml  index.html  index.md  params.json
.travis/: install_dependencies.sh  linux_dependencies.sh  osx_dependencies.sh
_includes/: footer.html  head.html  nav.html
_layouts/: page.html
css/: about.css  clean-blog.css
js/: about.js
src/: Output.cpp  Output.h  Utils.h  WorkImage.h  annotate.cpp  extractRect.cpp
src/annotation/: Annotation.cpp  Annotation.h  Annotation.md  Annotations.cpp  Annotations.h
src/annotations/: annotation.cpp  annotation.h  annotations.cpp  annotations.h
src/image/: Image.cpp  Image.h  Image.md  test.cpp
src/run/: annotate.cpp
src/tools/: tools.cpp  tools.h
travis/: linux_dependencies.sh  osx_dependencies.sh
